--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -46,12 +46,13 @@
   color: #000000;
   margin-top: -5px;
   border: solid 1px rgb(255, 255, 255);
+  transition: transform 0.3s ease;
 }
 .list li button:hover{
   background-color: #000000;
   border: solid 1px rgb(255, 255, 255);
   color: white;
-  
+  transform: scale(1.1);  
 }
 /* underline */
 .listitem::after{
