--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+::selection{
+  background: rgb(187, 0, 255);
+  color: rgb(255, 0, 0);
+}
+
+html{
+  scrollbar-color: rgb(183, 0, 255) rgb(108, 108, 108);
+}
