--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,15 +1,22 @@
 .navbar{
-    margin: 5px auto;
+    margin: 0px auto;
     width: 100%;
     display :flex;
     box-sizing: border-box;
-    background: linear-gradient(180deg, rgb(0, 0, 0), rgb(0, 0, 0));
+    background: linear-gradient(
+        145deg,
+        #0f051d 0%,
+        #1a0633 40%,
+        #14052a 100%
+      );    
+ 
     color: rgb(255, 255, 255);
     justify-content: space-between;
     height: 60px;
     padding: 0 40px;
     align-items: center;
 }
+
 .logo h1 {
   font-size: 40px;
   font-family: "LaFemina";
